# SPIRVSmith-Server

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
app/: config.py  main.py  models.py  utils.py
infra/: main.tf  versions.tf
tests/: dummy_data.py  test_main.py
